[package]
name = "aoc-2015"
version = "0.1.0"
authors = ["Ilya Nixan <thenixan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
num_cpus = "1.11.1"
regex = "1.3.1"
threadpool = "1.7.1"
